--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -73,17 +73,15 @@
   
       <h2>On this page</h2>
 <ul>
-<li><a href="#h_1">FHSA participationg after a holder's death</a></li>
+	<li><a href="#h_1">If you become a non-resident after opening an FHSA</a></li>
+	<li><a href="#h_2">Transferring amounts on the breakdown of a marriage or common-law partnership</a></li>
+<li><a href="#h_3">FHSA participationg after a holder's death</a></li>
 	<ul>
-		<li><a href="#h-1-1">Exempt period after a holder's death</a></li></ul>
-<li><a href="#h_2">Types of beneficiaries</a></li>
-	<ul>
-<li><a href="#h-2-1">Survivors</a>
+		
+<li><a href="#h-3-1">Types of beneficiaries</a></li>
+	
 
-
-</li>
-<li><a href="#h-2-2">Beneficiaries other than survivors</a></li></ul>
-<li><a href="#h_3">Closing the FHSAs after death</a></li>
+<li><a href="#h-3-2">Closing the FHSAs after death</a></li>
 </ul>
 
   
@@ -91,7 +89,24 @@
 
 </div>
 <div class="mwsbodytext text parbase section">
-  <h2 id="h-6">Transferring amounts on the breakdown of marriage or common-law partnership</h2>
+
+	<h2 id="h-1">If you become a non-resident after opening an FHSA</h2>
+<p>If you become a non-resident of Canada after you open your FHSA, you can continue to participate normally in your FHSA, with one exception:</p>
+<ul class="fa-ul">
+<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You cannot make a <a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a> to build or buy a <a href="#qualhome" aria-controls="qualhome" class="wb-lbx" role="button">qualifying home&nbsp;<span class="far fa-question-circle"></span></a> while you are a non-resident of Canada.</li>
+</ul>
+<p>One of the requirements of a qualifying withdrawal is that you must be a resident of Canada throughout the period that begins with the date of the first qualifying withdrawal and ends with the date of acquisition of the qualifying home.</p>
+<p>If you are a non-resident of Canada, any taxable withdrawal from your FHSA will be subject to withholding tax in the year of withdrawal.</p>
+
+<div class="mwsalerts section">
+</div>
+
+
+<div class="alert alert-info">
+	<p>The withholding tax is 25% for non-residents of Canada, unless reduced by a treaty. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/ic76-12.html">Information Circular IC76-12, Applicable rate of part XIII tax on amounts paid or credited to persons in countries with which Canada has a tax convention</a>.</p>
+</div>
+	
+  <h2 id="h-2">Transferring amounts on the breakdown of a marriage or common-law partnership</h2>
 <p>In general, you are not permitted to transfer property from your FHSAs to your current or former spouse or common-law partner without tax consequences.&nbsp;</p>
 <p>However, there will be no immediate tax consequences if you make a direct transfer from your FHSAs to an FHSA, <a href="#rrsp" aria-controls="rrsp" class="wb-lbx" role="button">registered retirement savings plan (RRSP)&nbsp;<span class="far fa-question-circle"></span></a>, or&nbsp;<a href="#rrif" aria-controls="rrif" class="wb-lbx" role="button">registered retirement income fund (RRIF)&nbsp;<span class="far fa-question-circle"></span></a> of your current or former spouse or common-law partner, and <strong>both</strong>&nbsp;of the following conditions are met:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -205,7 +220,7 @@
 
 
   
-      <h2><a id="h_1"></a>FHSA participtation after a holder's death</h2>
+      <h2><a id="h_3"></a>FHSA participtation after a holder's death</h2>
 
   
 
@@ -223,7 +238,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
 </details></div>
 </div>
 
- <h3><a id="h-1-1">Exempt period after a holder's death</a></h3> 
+ <h3>Exempt period after a holder's death</a></h3> 
 <p>An exempt period begins when the holder dies and ends on December 31 of the same year, or when the trust ceases to exist, if earlier.</p>
 
 
@@ -231,14 +246,14 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h2><a id="h_2"></a>Types of beneficiaries</h2>
+      <h3><a id="h-3-1"></a>Types of beneficiaries</h3>
 <p>After the death of the holder, the possible tax consequences will vary depending on the type of beneficiary and whether there is an <a href="#excessfhsa" aria-controls="excessfhsa" class="wb-lbx" role="button">excess FHSA amount&nbsp;<span class="far fa-question-circle"></span></a> at the time of death.</p>
 <p>The types of beneficiaries of an FHSA who can be designated in the FHSA contract or the deceased holder’s will are:</p>
 <ul>
-<li><a href="#h_3_1">A survivor who has been designated as the successor holder and is a qualifying individual</a></li>
-<li><a href="#h_3_2">A survivor who has been designated as the successor holder but is not a qualifying individual</a></li>
-<li><a href="#h_3_3">A survivor who has been designated as a beneficiary but not as the successor holder</a></li>
-<li><a href="#h_4">Beneficiaries other than survivors</a></li>
+<li><a href="#h_3_1-1">A survivor who has been designated as the successor holder and is a qualifying individual</a></li>
+<li><a href="#h_3_1-2">A survivor who has been designated as the successor holder but is not a qualifying individual</a></li>
+<li><a href="#h_3_1-3">A survivor who has been designated as a beneficiary but not as the successor holder</a></li>
+<li><a href="#h_1-4">Beneficiaries other than survivors</a></li>
 </ul>
 <p>Determining the type of beneficiary is the first important step.</p>
 <p>The type of beneficiary will depend on:</p>
@@ -258,7 +273,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h3><a id="h-2-1"></a>Survivors</h3>
+      <h4></a>Survivors</h4>
 <p>If you are a <a href="#spouse" aria-controls="spouse" class="wb-lbx" role="button">spouse&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#comlaw" aria-controls="comlaw" class="wb-lbx" role="button">common-law partner&nbsp;<span class="far fa-question-circle"></span></a> of the deceased holder immediately before their death, you are a <strong>survivor</strong> of the deceased holder. If you are a survivor, you may have been designated as the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a> or a beneficiary in the FHSA contract or in the deceased holder’s will.</p>
 
   
@@ -282,7 +297,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <p id="h_3_1">If you are a survivor who was designated as the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA and you are a <a href="#qualindividual" aria-controls="qualindividual" class="wb-lbx" role="button">qualifying individual&nbsp;<span class="far fa-question-circle"></span></a> at the time of the holder’s death, you will become the new holder of the FHSA immediately after the death of the holder. As the successor holder of the FHSA, you will be subject to the normal FHSA rules.</p>
+      <p id="h_3_1-1">If you are a survivor who was designated as the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA and you are a <a href="#qualindividual" aria-controls="qualindividual" class="wb-lbx" role="button">qualifying individual&nbsp;<span class="far fa-question-circle"></span></a> at the time of the holder’s death, you will become the new holder of the FHSA immediately after the death of the holder. As the successor holder of the FHSA, you will be subject to the normal FHSA rules.</p>
 <p>You will be considered to have entered into a new qualifying arrangement in respect of the FHSA <strong>unless</strong> the full balance of the FHSA is:</p>
 <div class="container-fluid"><ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">transferred to your RRSPs or RRIFs by the end of the <a href="#exemptperiod" aria-controls="exemptperiod" class="wb-lbx" role="button">exempt period&nbsp;<span class="far fa-question-circle"></span></a></li>
@@ -322,7 +337,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <p id="h_3_2">If you are a survivor who was designated as the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA but you are not a <a href="#qualindividual" aria-controls="qualindividual" class="wb-lbx" role="button">qualifying individual&nbsp;<span class="far fa-question-circle"></span></a> at the time of the FHSA holder’s death, you cannot become the new holder of the FHSA.</p>
+      <p id="h_3_1-2">If you are a survivor who was designated as the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA but you are not a <a href="#qualindividual" aria-controls="qualindividual" class="wb-lbx" role="button">qualifying individual&nbsp;<span class="far fa-question-circle"></span></a> at the time of the FHSA holder’s death, you cannot become the new holder of the FHSA.</p>
 <p>You will be required to withdraw or transfer all of the <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA by the end of the <a href="#exemptperiod" aria-controls="exemptperiod" class="wb-lbx" role="button">exempt period&nbsp;<span class="far fa-question-circle"></span></a> by <strong>either</strong>:</p>
 <div class="container-fluid"><ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">a <strong>direct</strong> transfer on a tax-deferred basis to your RRSPs or RRIFs</li>
@@ -358,7 +373,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <p id="h_3_3">If you are a survivor who has been designated as a beneficiary (not the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a>) in the deceased holder’s FHSA contract or in the deceased holder’s will, you cannot become the new holder of the FHSA.</p>
+      <p id="h_3_1-3">If you are a survivor who has been designated as a beneficiary (not the <a href="#successorholder" aria-controls="successorholder" class="wb-lbx" role="button">successor holder&nbsp;<span class="far fa-question-circle"></span></a>) in the deceased holder’s FHSA contract or in the deceased holder’s will, you cannot become the new holder of the FHSA.</p>
 <h4><a id="r_1"></a>Reporting during the exempt period</h4>
 <p>During the <a href="#exemptperiod" aria-controls="exemptperiod" class="wb-lbx" role="button">exempt period&nbsp;<span class="far fa-question-circle"></span></a>, you can do the following with the portion of the <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA that you are entitled to:</p>
 <div class="container-fluid"><ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -402,7 +417,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h4 id="h_3_4"><a id="r_2"></a>Reporting during the exempt period</h4>
+      <h4 id="h_3_1-4"><a id="r_2"></a>Reporting during the exempt period</h4>
 <p>Where there are no designated beneficiaries in the deceased holder’s FHSA contract or in the deceased holder’s will, the amounts from the FHSA will be distributed to the deceased holder’s estate and treated as income of the estate.</p>
 <p>However, if you have a beneficial interest in the deceased holder’s estate, you and the legal representative of the deceased holder’s estate may choose to do the following:</p>
 <div class="container-fluid"><ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -460,7 +475,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h3><a id="h-2-2"></a>Beneficiaries other than survivors</h3>
+      <h4></a>Beneficiaries other than survivors</h4>
 <p>The holder of an FHSA can designate any person or <a href="#qualdonee" aria-controls="qualdonee" class="wb-lbx" role="button">qualified donee&nbsp;<span class="far fa-question-circle"></span></a> (for example, a registered charity) as a beneficiary of their FHSA.</p>
 <p>If the deceased holder had an excess FHSA amount at the time of their death, special rules may apply. <span class="label label-info">Information about these rules will be available at a later date.</span></p>
 <h4><a id="r_3"></a>Reporting during the exempt period<br></h4>
@@ -569,7 +584,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
   
 
   
-      <h2><a id="h_3"></a>Closing the FHSAs after death</h2>
+      <h3><a id="h-3-2"></a>Closing the FHSAs after death</h3>
 <p>After the death of the last FHSA holder, all FHSAs should be closed by the end of the exempt period. If the account is not closed by the end of the exempt period, the account will cease to be an FHSA.&nbsp;</p>
 <p>If there is property remaining in the FHSA at the end of the exempt period, each beneficiary of the FHSA must include in their income for that year the proportion of the FMV of all the remaining property in the FHSA to which that beneficiary is entitled.</p>
 
