--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -73,8 +73,8 @@
   
       <h2>On this page</h2>
 <ul>
-	<li><a href="#h_1">If you become a non-resident after opening an FHSA</a></li>
-	<li><a href="#h_2">Transferring amounts on the breakdown of a marriage or common-law partnership</a></li>
+	<li><a href="#h-1">If you become a non-resident after opening an FHSA</a></li>
+	<li><a href="#h-2">Transferring amounts on the breakdown of a marriage or common-law partnership</a></li>
 <li><a href="#h_3">FHSA participationg after a holder's death</a></li>
 	<ul>
 		
@@ -253,7 +253,7 @@ Also, transfers cannot be made between the deceased holder’s FHSA and their ot
 <li><a href="#h_3_1-1">A survivor who has been designated as the successor holder and is a qualifying individual</a></li>
 <li><a href="#h_3_1-2">A survivor who has been designated as the successor holder but is not a qualifying individual</a></li>
 <li><a href="#h_3_1-3">A survivor who has been designated as a beneficiary but not as the successor holder</a></li>
-<li><a href="#h_1-4">Beneficiaries other than survivors</a></li>
+<li><a href="#h_3_1-4">Beneficiaries other than survivors</a></li>
 </ul>
 <p>Determining the type of beneficiary is the first important step.</p>
 <p>The type of beneficiary will depend on:</p>
