--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -384,7 +384,7 @@
 			  <p><strong>Next:</strong> Check if you meet the additional criteria for opening an FHSA.</p>
                   </div>
 
-		 <h3>Additional criteria for opening an FHSA account</h3>
+		 <h3>At the time of opening an FHSA you must also meet this additional criteria:</h3>
 		 <fieldset>
                   <ul class="checkbox-zebra gc-chckbxrdio">
 
