--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -407,7 +407,7 @@
                         <input type="checkbox" id="eg5" name="action-checkbox" value="additional">
                         <label for="eg5">You are a resident of Canada</label>
                        
-                         <p>  <a href="lifeevents.html#h-1">If you become a non-resident after opening an FHSA</a></p>
+                        <p class="mrgn-lft-xl mrgn-rght-md mrgn-tp-md">   <a href="lifeevents.html#h-1">If you become a non-resident after opening an FHSA</a></p>
                            	
 
 </fieldset>	
