--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-      <title>Life events and your First Home Savings Account (FHSA) – Canada.ca</title>
+      <title>Life events and First Home Savings Account (FHSA) – Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport">
       <meta name=”robots” content=”noindex”>
       <!-- Meta data -->
@@ -35,19 +35,28 @@
              href: "#",
              text: "Français"
            }],
-           breadcrumbs: [{
-             title: "Canada.ca",
-             href: "https://www.canada.ca/en.html"
-           }
-		   ],
-           search: true,
-           siteMenu: true,
-           showPreContent: true
-         });
-      </script>
+            breadcrumbs: [{
+                title: "Canada.ca",
+                href: "https://www.canada.ca/en.html"
+              },{
+                title: "Taxes",
+                href: "https://www.canada.ca/en/services/taxes.html"
+              },{
+                title: "Savings and pension plans",
+                href: "https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html"
+              },{
+                title: "First Home Savings Account (FHSA)",
+                href: "index.html"
+              }
+              ],
+              search: true,
+              siteMenu: true,
+              showPreContent: true
+            });
+         </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
 <div class="mwsgeneric-base-html parbase section">
-  <h1 property="name" id="wb-cont">Life events and your First Home Savings Account (FHSA)</h1>
+  <h1 property="name" id="wb-cont">Life events and First Home Savings Account (FHSA)</h1>
   <div class="container">
    
   </div>
