--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-      <title>Life events and First Home Savings Account (FHSA) – Canada.ca</title>
+      <title>Life events and First Home Savings Accounts (FHSAs) – Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport">
       <meta name=”robots” content=”noindex”>
       <!-- Meta data -->
@@ -56,7 +56,7 @@
          </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
 <div class="mwsgeneric-base-html parbase section">
-  <h1 property="name" id="wb-cont">Life events and First Home Savings Account (FHSA)</h1>
+  <h1 property="name" id="wb-cont">Life events and First Home Savings Accounts (FHSAs)</h1>
   <div class="container">
    
   </div>
