--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -106,7 +106,7 @@
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="lifeevents.html">Life events and FHSAs</a></h3>
-          <p>What happens to an FHSA when the FHSA holder dies, ends a marriage or common-law relationship, or becomes a non-resident of Canada</p>
+          <p>What happens to an FHSA when the FHSA holder ends a marriage or common-law relationship, becomes a non-resident of Canada, or dies</p>
         </section>	    
       </div>
       <div class="col-lg-4 col-md-6">
