--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -131,8 +131,8 @@
     <div data-wb-jsonmanager="{&quot;url&quot;: &quot;https://www.canada.ca/api/assets/cra-arc/content-fragments/income-tax-rates.json#/properties/elements&quot;, &quot;name&quot;: &quot;income-tax-rates&quot;}"></div>
   </div>
   <div class="mwsbodytext text parbase section">
-	  <p>Use the federal and provincial or territorial rates to determine the total income tax you will pay.</p>
-    
+	  <p>Canadian federal, provincial, and territorial income tax rates for current and previous tax years.</p>
+    <p>Use <strong>both</strong> the federal and provincial or territorial rates to determine the total income tax you will pay.</p>
     <p>Provincial and territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
  
   </div>
@@ -140,11 +140,11 @@
     <nav role="navigation">
       <h2 class="h3">On this page</h2>
       <ul>
-	           <li><a href="#toc0">Overview</a></li>
+	           <li><a href="#toc0">How tax rates work in Canada</a></li>
         <li><a href="#toc1">Federal rates for 2023</a></li>
         <li><a href="#toc2">Provincial and territorial rates for 2023</a> </li>
         <li><a href="#toc3">Calculate the tax</a> </li>
-        <li><a href="#toc4">Previous years</a></li>
+        <li><a href="#toc4">Tax rates for previous years</a></li>
       </ul>
     </nav>
     <!--script type="text/javascript">
