--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -526,7 +526,7 @@
 <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2022&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -593,7 +593,7 @@
      <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2021&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2021&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -661,7 +661,7 @@
      <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2020&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2020&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -732,7 +732,7 @@
      <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2019&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2019&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -803,7 +803,7 @@
      <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2018&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2018&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -874,7 +874,7 @@
   <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2017&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2017&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -945,7 +945,7 @@
   <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2016&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2016&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -1019,7 +1019,7 @@
   <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2015&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2015&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -1090,7 +1090,7 @@
   <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2014&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2014&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
@@ -1161,7 +1161,7 @@
   <div class="wb-frmvld fieldflow-lg max-content">
       <form>
         <div class="wb-fieldflow" data-wb-fieldflow="{&quot;noForm&quot;: true, &quot;isoptional&quot;: true, &quot;defaultselectedlabel&quot;:&quot;Choose a region&quot;, &quot;reset&quot;: {&quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.province-display&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}}">
-          <p class="wb-inv">Choose your region</p>
+          <p class="wb-inv">Choose the location in which you are living on December 31 of the tax year</p>
           <ul>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#alberta-2013&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">Alberta</li>
             <li data-wb-fieldflow="{&quot;action&quot;: &quot;removeClass&quot;, &quot;source&quot;: &quot;#britishColumbia-2013&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;live&quot;: true}">British Columbia</li>
