--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -500,7 +500,7 @@
   <ul class="cnjnctn-type-and cnjnctn-sm">
       <li class="cnjnctn-col">
 	      <h4 class="mrgn-tp-sm text-muted">Income Tax and Benefit Return<span class="wb-inv"></span></h4>
-        <p>Calculate your federal tax on taxable income (Step 5)</p>
+        <p>Calculate your federal tax on taxable income (Step 5 in your return)</p>
       </li>
       <li class="cnjnctn-col">
 	       <h4 class="mrgn-tp-sm text-muted">Form 428<span class="wb-inv"></span></h4>
