--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -421,7 +421,7 @@
 
     
         <h4>Closing your FHSAs after making a qualifying withdrawal</h4>
-<p>You should close <strong>all</strong> of your FHSAs on or before <span class="nowrap">December 31</span> of the year following the year of your first qualifying withdrawal. This is because your <a href="#maxpart" aria-controls="maxpart" class="wb-lbx" role="button">maximum participation period&nbsp;<span class="far fa-question-circle"></span></a> ends at the end of the year following the year of your first qualifying withdrawal. For more information, go to&nbsp;<a href="close.html">When to close an FHSA</a>.</p>
+<p>You should close <strong>all</strong> of your FHSAs on or before <span class="nowrap">December 31</span> of the year following the year of your first qualifying withdrawal. This is because your <a href="#maxpart" aria-controls="maxpart" class="wb-lbx" role="button">maximum participation period&nbsp;<span class="far fa-question-circle"></span></a> ends at the end of the year following the year of your first qualifying withdrawal. For more information, go to&nbsp;<a href="close.html#h-1">When to close an FHSA</a>.</p>
 
     
 
