--- a/fhsa/v4/marriage.html
+++ b/fhsa/v4/marriage.html
@@ -312,9 +312,9 @@
 <p>When <strong>both</strong> conditions are met, the transfer will <strong>not</strong> impact your current or former spouse’s or common-law partner’s&nbsp;<a href="#unusedfhsapart" aria-controls="unusedfhsapart" class="wb-lbx" role="button">unused FHSA participation room&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#unusedrrsp" aria-controls="unusedrrsp" class="wb-lbx" role="button">unused RRSP deduction room&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 <p>If you transfer an amount that exceeds the FMV of all your FHSAs <strong>minus</strong> your excess FHSA amount, that additional amount will:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">have to be included as income on your income tax and benefit return for the year of the transfer</li>
-<li class="cnjnctn-col">be treated as a new contribution to your current or former spouse’s or common-law partner’s FHSAs or RRSPs</li>
-<li class="cnjnctn-col">reduce your current or former spouse’s or common-law partner’s unused FHSA participation room or unused RRSP deduction room, and could result in an excess FHSA amount or RRSP excess contributions in certain cases</li>
+<li class="cnjnctn-col">Have to be included as income on your income tax and benefit return for the year of the transfer</li>
+<li class="cnjnctn-col">Be treated as a new contribution to your current or former spouse’s or common-law partner’s FHSAs or RRSPs</li>
+<li class="cnjnctn-col">Reduce your current or former spouse’s or common-law partner’s unused FHSA participation room or unused RRSP deduction room, and could result in an excess FHSA amount or RRSP excess contributions in certain cases</li>
 </ul>
 
     
