--- a/fhsa/v4/nonresidents.html
+++ b/fhsa/v4/nonresidents.html
@@ -289,7 +289,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Non-residents and FHSAs</h1>
-<p>There are some limitation to how you may participate in your FHSA if you become a non-resident of Canada.</p>
+<p>There are some limitations to how you may participate in your FHSA if you become a non-resident of Canada.</p>
 	<h2 id="h-1">If you become a non-resident after opening an FHSA</h2>
 <p>If you become a non-resident of Canada after you open your FHSA, you can continue to participate normally in your FHSA, with one exception:</p>
 <ul class="fa-ul">
