--- a/fhsa/v4/death.html
+++ b/fhsa/v4/death.html
@@ -60,7 +60,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Death and FHSAs</h1>
-        <p>Learn about the steps that you may need to take after a&nbsp;<a href="#holder" aria-controls="holder" class="wb-lbx" role="button">holder&nbsp;<span class="far fa-question-circle"></span></a> of a first home savings account (FHSA) dies.</p>
+        <p>Learn about the steps you may need to take after a&nbsp;<a href="#holder" aria-controls="holder" class="wb-lbx" role="button">holder&nbsp;<span class="far fa-question-circle"></span></a> of a first home savings account (FHSA) dies.</p>
 		
 
 	
