--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -70,14 +70,14 @@
     <div class="wb-eqht row">
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="marriage.html">Breakdown of marriage or common-law partnership and FHSA</a></h3>
+          <h3><a href="marriage.html">Breakdown of marriage or common-law partnership and FHSAs</a></h3>
           <p>The breakdown of your marriage or common-law partnership may affect your FHSA</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="nonresidents.html">Non-residents and FHSAs</a></h3>
-          <p>What happens if you become a non-resident of Canada after opening and FHSA</p>
+          <p>What happens if you become a non-resident of Canada after opening an FHSA</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
