--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -414,7 +414,7 @@
 
 
 		 <div class="alert alert-info hidden provisional" id="action-all-not-qualify-msg">
-                    <h3>You need all of the above to make a qualifying withdrawal</h3>
+                    <h3>You need all of the above to open an FHSA</h3>
 			  <p>If you do not meet all of the conditions above you would not be a qualifying individual and could not open an FHSA.</p>
                   </div>
                   <div class="alert alert-success hidden provisional" id="action-all-qualify-msg">
