--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -83,8 +83,8 @@
             </li>
         	<li><a href="grouping.html" class="active" aria-current="page">Group work into SR&amp;ED projects</a>
             </li>
-            <li><a href="get-form.html" class="hidden-xs hidden-sm">Get the T661 expenditures claim form</a>
-			    <a href="get-form.html#gc-document-nav" class="visible-xs visible-sm">Get the T661 expenditures claim form</a> 
+            <li><a href="get-form.html" class="hidden-xs hidden-sm">Report expenditures with form T661</a>
+			    <a href="get-form.html#gc-document-nav" class="visible-xs visible-sm">Report expenditures with form T661</a> 
             </li>
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate  allowable expenditures</a> 
