--- a/sred/scientific-research-experimental-development-tax-incentive-program/how.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how.html
@@ -107,7 +107,7 @@
     <p>Review what an SR&amp;ED project is and how to group your eligible work into projects</p>
   </li>
   <li>
-    <h3><a href="get-form.html">Get the T661 expenditures claim form</a></h3>
+    <h3><a href="get-form.html">Report expenditures with form T661</a></h3>
     <p>Use the T661 expenditures claim form to calculate your SR&amp;ED expenditures </p>
     </li>
   <li>
