--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -132,8 +132,7 @@
   </div>
   <div class="mwsbodytext text parbase section">
 	  <p>Canadian federal, provincial, and territorial income tax rates for current and previous tax years.</p>
-    <p>Use <strong>both</strong> the federal and provincial or territorial rates to determine the total income tax you will pay.</p>
-    <p>Provincial and territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
+    <p>Use <strong>both</strong> the federal and provincial or territorial rates to determine the total income tax you will pay. Provincial and territorial income tax rates apply <strong>in addition to</strong> federal income tax rates.</p>
  
   </div>
   <div class="mwsinpagetoc section">
@@ -190,18 +189,19 @@
 	 <li>calculating your combined tax rate</li>
 	  </ul>
 	  
-	  
+	  <h3>Taxable income</h3>
 	 
-    <p><strong>Taxable income</strong> is <strong>line 26000</strong> of your Income Tax and Benefit Return. It is your income after various deductions, credits, and exemptions have been applied.</p>
+    <p>Taxable income is <strong>line 26000</strong> of your Income Tax and Benefit Return. It is your income after various deductions, credits, and exemptions have been applied.</p>
 	  <p>You may be eligible to claim various deductions, credits, and exemptions to reduce the amount of tax you need to pay.</p>
 
 	  <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/deductions-credits-expenses.html" target="_blank">All deductions, credits, and expenses</a></p>
-	 
-	  <p>Your <strong>combined tax rate</strong> is:</p>
+	 <h3>Combined tax rate</h3>
+	  <p>Your combined tax rate is:</p>
 	  <ul>
 		  <li>your federal tax amount plus your provincial or territorial tax amount</li>
 		  <li>the total tax you will pay for the calendar year</li>
 	  </ul>
+	  <h3>Income tax deductions from your pay</h3>
 	  <p>Generally, most employers will deduct both federal income tax and provincial or territorial income tax directly from your pay. You can choose to have more tax deducted from your pay by completing a Form TD1 and providing it to your employer. Increasing your income tax deduction can avoid you having to pay a large amount of tax at the end of the tax year.</p>
   <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/income-tax/increasing-income-tax-deductions.html" target="_blank">Increasing income tax deductions</a></p>
 	  
