--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -108,7 +108,7 @@
 <h2 class="h3">On this page</h2>
 <ul>
   <li><a href="#h1">Review your claim</a></li>
-  <li><a href="#h2">Reporting deadline</a></li>
+  <li><a href="#h2">SR&amp;ED reporting deadlines</a></li>
   <li><a href="#h4">How to submit your claim</a></li>
   <li><a href="#h3">Get support submitting your claim</a></li>
 </ul>
@@ -124,7 +124,7 @@
 </ul>
 <p>To learn more about prescribed SR&amp;ED forms, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/filing-requirements-policy.html#toc3">Section 3, SR&amp;ED Filing Requirements Policy</a>.</p>
 
-		 <h2 id="h2">Reporting deadline</h2>
+		 <h2 id="h2">SR&amp;ED reporting deadlines</h2>
 <p>Your SR&amp;ED reporting deadline depends on your income tax filing due date. Your income tax filing due date depends on what type of taxpayer you are (individual, corporation, or trust). </p>
        
 <dl class="dl-horizontal brdr-0">            
