--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -167,7 +167,7 @@
 <p>If you submit your claim at least <strong>90 days</strong> before the SR&amp;ED reporting deadline, it should give the CRA enough time to do an initial review. If any information is missing, we will have time to advise you to modify your claim before the deadline.</p>
 </details>
 			 
-<h3>Find out when your deadline is</h3>
+<h3>Find out when your SR&amp;ED reporting deadline is</h3>
 <p>Your SR&amp;ED reporting deadline depends on your income tax filing due date. Your filing due date depends on what type of taxpayer you are (individual, corporation, or trust). </p>
 			 
 <dl class="dl-horizontal brdr-0">            
