--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -248,7 +248,7 @@ CANADA</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
-	<h2 id="toc2">Non-service feedback</h2>
+	<h2 id="toc2">Diagreeing or disputing something you received from the CRA </h2>
 <p>These are other types of complaints or problems not related to service.</p>
 	
 	<p>Some examples:</p>
