--- a/cops/service-feedback/sf-2.html
+++ b/cops/service-feedback/sf-2.html
@@ -176,7 +176,7 @@ CANADA</p>
 	<h2>Not happy with your resolution</h2>
 	<h3>Office of the Taxpayers' Ombudsperson</h3>
 <p>If you are still not satisfied with how the CRA handled your service complaint, you can contact the <a href="http://www.oto-boc.gc.ca/menu-eng.html" target="_blank">Office of the Taxpayers' Ombudsperson</a>. Generally, the Office of the Taxpayers' Ombudsperson will not review a service complaint until the CRA has finished its review.</p>
-	<h2 id="toc2">Diagreeing or disputing </h2>
+	<h2 id="toc2">Disagreeing or disputing </h2>
 <p>These are other types of complaints or problems not related to service.</p>
 	
 	<p>Some examples:</p>
