--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -66,7 +66,7 @@
   <ul>
 <li><a href="#toc0">Types of feedback</a></li>
     <li><a href="#toc1">Service feedback</a></li>
-    <li><a href="#toc3">Non-service feedback</a></li>
+    <li><a href="#toc3">Disagreeing or disputing something you received</a></li>
     <li><a href="#toc34">Your rights as a taxpayer</a></li>
   
  
@@ -248,7 +248,7 @@ CANADA</p>
 		
 	<p>For details: <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/check-cra-processing-times.html">Check the CRA processing times</a></p>
 	
-	<h2 id="toc2">Diagreeing or disputing something you received from the CRA </h2>
+	<h2 id="toc2">Disagreeing or disputing something you received</h2>
 <p>These are other types of complaints or problems not related to service.</p>
 	
 	<p>Some examples:</p>
