--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1194,12 +1194,12 @@ Other reason
         updateChkbx($(":input[type=checkbox][name=action-checkbox]"), $(":input[type=checkbox][name=action-checkbox]:checked"), "action-all-qualify-msg", "action-all-not-qualify-msg");
     };
 
-    window.onload = updateChkbxList();
+    window.onload = updateChkbxList;
 //            if ($(":input[type=checkbox][name=action-checkbox]:checked").length > 0) {
 //                updateCheckboxes();
 //        }
 
-    $(":input[type=checkbox][name=action-checkbox]").change(updateChkbxList());
+    $(":input[type=checkbox][name=action-checkbox]").change(updateChkbxList);
 //    $(":input[type=checkbox][name=action-checkbox]").change(function () {updateCheckboxes()});
 </script>
 </body>
