--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1191,7 +1191,7 @@ Other reason
         }
     }, 
     updateChkbxList = function () {
-        updateChkbx($(":input[type=checkbox][name=action-checkbox]"), $(":input[type=checkbox][name=action-checkbox]:checked"), "action-all-qualify-msg", "action-all-not-qualify-msg");
+        updateChkbx($(":input[type=checkbox][name=action-checkbox]"), $(":input[type=checkbox][name=action-checkbox]:checked"), "action-qualify-msg", "action-not-qualify-msg");
     };
 
     window.onload = updateChkbxList;
