--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -1077,8 +1077,8 @@ Other reason
     };
     
     window.onload = function () {
-        updateChkbxList;
-        updatePartChkbxList;
+        updateChkbxList();
+        updatePartChkbxList();
     }
 
     $(":input[type=checkbox][name=action-checkbox]").change(updateChkbxList);
